--- a/style.css
+++ b/style.css
@@ -47,7 +47,10 @@ button:hover{
     margin-bottom: 20px;
 }
 .inputSection{
-    display:flex;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
 }
 textarea{
     width: 90%;
